--- a/config.json
+++ b/config.json
@@ -3,6 +3,5 @@
   "Host":             "0.0.0.0",
   "IPVersion":        "tcp4",
   "Port":             8999,
-  "MaxConn":          5,
-  "MaxPackSize":      512
+  "MaxConn":          5
 }
